--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
   </head>
   <body>
     <!--header--->
-    <header>
+    <header >
       <img class="logo" src="img/logo.png" alt="Logo" />
-
-      <!--<div class="bx bx-menu" id="menu-icon"></div>-->
-
       <ul class="navbar">
         <li><a href="index.html" title="Return to the homepage">Home</a></li>
         <!--seo / ajouter des titres aux lignes--->
@@ -287,7 +284,7 @@
     </section>
 
     <!--footer--->
-    <section id="contact">
+    <section id="sectionfooter">
       <div class="footer">
         <div class="footer1">
           <div class="footer1item">
@@ -296,10 +293,10 @@
           <div class="footer1item">
 			<a href="#" class="home-link">Follow us</a>
               <div class="social">
-				<a href="#"><img class="iconS" src="img/s1.png" alt="Logo" /></a>
-				<a href="#"><img class="iconS" src="img/s2.png" alt="Logo" /></a>
-				<a href="#"><img class="iconS" src="img/s3.png" alt="Logo" /></a>
-				<a href="#"><img class="iconS" src="img/s4.png" alt="Logo" /></a>
+				<a href="#"><img class="iconS" src="img/s1.png" alt="" /></a>
+				<a href="#"><img class="iconS" src="img/s2.png" alt="" /></a>
+				<a href="#"><img class="iconS" src="img/s3.png" alt="" /></a>
+				<a href="#"><img class="iconS" src="img/s4.png" alt="" /></a>
               </div>
            
           </div>
