propos menu fini

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <!--container--->
-    <section class="container">
+    <section >
       <div class="title">
         <h2>Top products</h2>
       </div>
@@ -69,42 +69,13 @@
           <div class="container-img">
             <img src="img/p1.png" />
           </div>
-          <div class="flex-container">
+          <div class="flex-container-row">
             <div class="flex-item">$40</div>
             <div class="flex-item">
-              <svg
-                viewBox="0 0 24 24"
-                width="30"
-                height="30"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_iconCarrier">
-                  <circle
-                    cx="12"
-                    cy="12"
-                    r="10"
-                    stroke="#ffffff"
-                    stroke-width="1.5"
-                  ></circle>
-                  <path
-                    d="M12 17V11"
-                    stroke="#ffffff"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                  ></path>
-                  <circle
-                    cx="1"
-                    cy="1"
-                    r="1"
-                    transform="matrix(1 0 0 -1 11 9)"
-                    fill="#ffffff"
-                  ></circle>
-                </g>
-              </svg>
+              <svg viewBox="0 0 24 24" width="30" height="30" fill="none" xmlns="http://www.w3.org/2000/svg" > <g id="SVGRepo_iconCarrier"> <circle cx="12" cy="12" r="10" stroke="#ffffff" stroke-width="1.5" ></circle> <path d="M12 17V11" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" ></path> <circle cx="1" cy="1" r="1" transform="matrix(1 0 0 -1 11 9)" fill="#ffffff" ></circle> </g> </svg>
             </div>
           </div>
-          <div class="flex-container">
+          <div class="flex-container-row">
             <div class="flex-item">
               Whole Grain<br />
               Bread
@@ -117,7 +88,7 @@
           <div class="container-img">
             <img src="img/p2.png" />
           </div>
-          <div class="flex-container">
+          <div class="flex-container-row">
             <div class="flex-item">$40</div>
             <div class="flex-item">
               <svg
@@ -152,7 +123,7 @@
               </svg>
             </div>
           </div>
-          <div class="flex-container">
+          <div class="flex-container-row">
             <div class="flex-item">
               Whole Grain<br />
               Bread
@@ -165,7 +136,7 @@
           <div class="container-img">
             <img src="img/p3.png" />
           </div>
-          <div class="flex-container">
+          <div class="flex-container-row">
             <div class="flex-item">$40</div>
             <div class="flex-item">
               <svg
@@ -200,7 +171,7 @@
               </svg>
             </div>
           </div>
-          <div class="flex-container">
+          <div class="flex-container-row">
             <div class="flex-item">
               Whole Grain<br />
               Bread
@@ -211,7 +182,7 @@
       </div>
     </section>
     <!------------------------- explorer ------------------------------------>
-    <section class="container">
+    <section>
       <div class="title">
         <h2>Explore</h2>
       </div>
@@ -238,20 +209,11 @@
       </div>
     </section>
     <!------------------------- feature ------------------------------------>
-    <section class="container">
+    <section>
       <div class="title">
-        <h2>Explore</h2>
+        <h2>Feature</h2>
       </div>
-      <nav class="second-navbar">
-        <ul class="second-navbar">
-          <li><a href="#">Cake</a></li>
-          <li><a href="#">Muffins</a></li>
-          <li><a href="#">Croissants</a></li>
-          <li><a href="#">Breads</a></li>
-          <li><a href="#">tart</a></li>
-          <li><a href="#">Favorite</a></li>
-        </ul>
-      </nav>
+     
       <div class="package-content">
         <div class="box">
           <div class="thum">
